# venjix-metareasoning

./: .gitignore  README.md  pyproject.toml
docs/: ANALYSIS.md  CLAUDE.md  FUTURE.md
experiments/: exp-v1.json
scripts/: calibrate_world_model.py
src/venjix/: agents.py  bandit.py  batch.py  calibration.py  config.py  experiments.py  gridworld.py  llm.py  logs.py  memory.py  runner.py  shifts.py  signal.py  world.py
tests/: test_bandit.py  test_batch.py  test_calibration.py  test_experiments.py  test_gridworld.py  test_heuristic.py  test_llm.py  test_memory.py  test_mode_agents.py  test_reactive.py  test_runner.py  test_shifts.py  test_signal.py  test_vast_client.py  test_vllm_client.py  test_world.py
