[project]
name = "venjix"
version = "0.1.0"
description = "Phase 1: adaptive metareasoning for LLM agents under nonstationarity"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/venjix"]

[tool.pytest.ini_options]
testpaths = ["tests"]
